// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BooleanInput should render 1`] = `
<div>
  <div
    class="criteria-statement"
  >
    <div
      class="form-group form-group-autofit"
    >
      <div
        aria-hidden="true"
        class="form-group-item entity-name form-group-item-label form-group-item-shrink"
        data-aria-hidden="true"
      />
      <div
        aria-hidden="true"
        class="form-group-item display-value form-group-item-label form-group-item-shrink"
        data-aria-hidden="true"
      />
      <div
        aria-hidden="true"
        data-aria-hidden="true"
      >
        operator
      </div>
      <div
        class="form-group-item form-group-item-shrink"
      >
        <button
          aria-activedescendant="true"
          aria-controls="clay-id-2"
          aria-expanded="true"
          aria-haspopup="listbox"
          aria-owns="clay-id-2"
          class="form-control form-control-select form-control-select-secondary criterion-input show"
          role="combobox"
          style=""
          tabindex="0"
          type="button"
        >
          Select an option
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`BooleanInput should render with data 1`] = `
<div>
  <div
    class="criteria-statement"
  >
    <div
      class="form-group form-group-autofit"
    >
      <div
        aria-hidden="true"
        class="form-group-item entity-name form-group-item-label form-group-item-shrink"
        data-aria-hidden="true"
      />
      <div
        aria-hidden="true"
        class="form-group-item display-value form-group-item-label form-group-item-shrink"
        data-aria-hidden="true"
      >
        Do Not Call
      </div>
      <div
        aria-hidden="true"
        data-aria-hidden="true"
      >
        operator
      </div>
      <div
        class="form-group-item form-group-item-shrink"
      >
        <button
          aria-activedescendant="true"
          aria-controls="clay-id-4"
          aria-expanded="true"
          aria-haspopup="listbox"
          aria-owns="clay-id-4"
          class="form-control form-control-select form-control-select-secondary criterion-input show"
          role="combobox"
          style=""
          tabindex="0"
          type="button"
        >
          True
        </button>
      </div>
    </div>
  </div>
</div>
`;
